--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-boilerplate-server",
+  "name": "stock-wise-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/server.js",
     "start:dev": "nodemon -e js --watch src --exec \"npm run start\""
   },
   "repository": {
@@ -37,5 +37,10 @@
     "eslint-plugin-import": "^2.22.0",
     "husky": "^4.3.0",
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5"
   }
 }
