--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "start": "npm run build && node dist/server.js",
-    "start:dev": "nodemon -e js --watch src --exec \"npm run start\""
+    "start:dev": "nodemon -e js --watch src --exec \"npm run start\"",
+    "seed": "npm run build && node dist/seed/seed.js"
   },
   "repository": {
     "type": "git",
